--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "babel-plugin-pipeline",
+  "name": "babel-plugin-pipe",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
