--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "type": "git",
     "url": "git+https://github.com/qingguoing/babel-plugin-pipeline.git"
   },
-  "keywords": ["pipe", "pipeline", "Object destructuring"],
+  "keywords": [
+    "pipe",
+    "pipeline",
+    "Object destructuring"
+  ],
   "author": "qingguoing@gmail.com",
   "license": "ISC",
   "bugs": {
@@ -19,5 +23,8 @@
   "homepage": "https://github.com/qingguoing/babel-plugin-pipeline#readme",
   "dependencies": {
     "@babel/core": "^7.4.0"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.4.3"
   }
 }
