--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/core": "^7.4.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-transform-destructuring": "^7.4.3",
     "@babel/preset-env": "^7.4.3"
   }
 }
