--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a plugin of babel",
   "main": "src/index.js",
   "scripts": {
-    "test": "node test/index.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
     "@babel/plugin-transform-destructuring": "^7.4.3",
-    "@babel/preset-env": "^7.4.3"
+    "@babel/preset-env": "^7.4.3",
+    "mocha": "^6.1.4"
   }
 }
